INTYGFV-16366: Logic to call CS when saving certificates handled by CS. Refactored csintegration package. Fixed pdl-logging in csintegration. Refactored pdl-logging and its test and removed code not needed.